# YahBoom_arm_demo

./: CMakeLists.txt  detection.ipynb  detection.py  detection1.py
include/: base.h  pythonThread.h  videowidget.h
python/: actions.py  camear.ipynb  control.ipynb  detection.py  video_sender.ipynb
src/: base.cpp  base.ui  main.cpp  pythonThread.cpp  videowidget.cpp  videowidget.ui
src/utils/: tcptestnode.cpp
